адаптив header footer 1 экран

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,15 @@
         <use xlink:href="images/sprites/sprite-multi.svg#logo"></use>
       </svg>
     </a>
-    <ul class="header__social social list-reset">
+    <div class="header__social-wrap">
       <span class="social__text">Напишите нам</span>
-      <li class="social__item social__item--viber"><a href="#" class="social__link">Viber</a></li>
-      <li class="social__item social__item--whatsapp"><a href="#" class="social__link">Whatsapp</a></li>
-      <li class="social__item social__item--telegram"><a href="#" class="social__link">Telegram</a></li>
-    </ul>
+      <ul class="header__social social list-reset">
+        <li class="social__item social__item--viber"><a href="#" class="social__link">Viber</a></li>
+        <li class="social__item social__item--whatsapp"><a href="#" class="social__link">Whatsapp</a></li>
+        <li class="social__item social__item--telegram"><a href="#" class="social__link">Telegram</a></li>
+      </ul>
+    </div>
+
     <a href="tel:+73952799343" class="header__phone phone">
       <svg width="19" height="19">
         <use xlink:href="images/sprites/sprite-multi.svg#headphone"></use>
@@ -97,10 +100,10 @@
         </div>
 
         <div class="offer__form form-wrapper">
-          <div class="form__img">
+          <div class="offer-form__img form__img">
             <img src="images/dekor-1.png" aria-hidden="true" alt="">
           </div>
-          <form class="form">
+          <form class="offer-form form">
             <div class="form__title">
               Замер глубины скважины
             </div>
@@ -128,7 +131,7 @@
       </div>
     </section>
 
-    <section class="experience-section">
+    <!-- <section class="experience-section">
       <div class="container experience__container">
         <div class="experience__top">
           <div class="experience">
@@ -265,9 +268,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="features-section">
+    <!-- <section class="features-section">
       <a href="#" class="online-cons">
         <img src="images/online-cons.png" alt="">
       </a>
@@ -356,9 +359,9 @@
           </article>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="technics-section">
+    <!-- <section class="technics-section">
       <div class="container technics__container">
         <h2 class="technics__title section-title">
           РАБОТАЕМ
@@ -383,12 +386,11 @@
               data-aos-duration="3000"
               data-aos-anchor=".technics-item__img"
               src="images/technics-car.png" alt="">
-            <!-- <img src="images/technics-tree.png" alt=""> -->
           </div>
         </div>
       </div>
-    </section>
-    <section class="guarantee-section">
+    </section> -->
+    <!-- <section class="guarantee-section">
       <div class="container guarantee__container">
         <h2 class="visually-hidden">
           Гарантии и документы
@@ -602,8 +604,8 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="result-section">
+    </section> -->
+    <!-- <section class="result-section">
       <div class="container result__container">
         <h2 class="result__title section-title">
           РЕЗУЛЬТАТ
@@ -711,8 +713,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="prices-section">
+    </section> -->
+    <!-- <section class="prices-section">
       <div class="container prices__container">
         <h2 class="prices__title section-title">
           Честные цены
@@ -1261,8 +1263,8 @@
         </div>
 
       </div>
-    </section>
-    <section class="map-section">
+    </section> -->
+    <!-- <section class="map-section">
       <div class="container map__container">
         <div class="map__content">
           <h2 class="map__title section-title">
@@ -1317,8 +1319,8 @@
 
         </div>
       </div>
-    </section>
-    <section class="time-limits-section">
+    </section> -->
+    <!-- <section class="time-limits-section">
       <div class="container time-limits__container">
         <h2 class="time-limits__title section-title">
           Бурим
@@ -1351,11 +1353,6 @@
             <svg class="time-limits__item__icon" width="120" height="89">
               <use xlink:href="images/sprites/sprite-multi.svg#time-limits-3"></use>
             </svg>
-            <!-- <div class="time-limits__item-icon">
-              <svg width="38" height="44">
-                <use xlink:href="images/sprites/sprite-multi.svg#time-limits-1"></use>
-              </svg>
-            </div> -->
             <div class="time-limits__item__title">
               Бурим до 210 метров только компрессором
             </div>
@@ -1391,8 +1388,8 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="work-order-section">
+    </section> -->
+    <!-- <section class="work-order-section">
       <div class="container work-order__container">
         <a class="work-order__banner" href="#">
           <img class="work-order__img" src="images/sovest.png" alt="">
@@ -1620,7 +1617,7 @@
 
 
       </div>
-    </section>
+    </section> -->
     <footer class="footer">
       <div class="footer__container container">
         <a href="#" class="to-top">
@@ -1779,7 +1776,7 @@
     <div class="popup popup-request">
       <div class="popup__wrapper">
           <div class="popup__inner">
-              <div class="popup__content">
+              <div class="popup__content popup__content--centered">
                 <button class="btn-reset header__mobile-btn  header__mobile-btn--close popup-close popup__btn-close" type="button" aria-label="Закрыть окно">
                   <svg width="15" height="5">
                     <use xlink:href="images/sprites/sprite-multi.svg#close"></use>
@@ -1788,7 +1785,7 @@
 
                 <div class="popup-request__title">Заказ консультации</div>
                 <form class="popup-request__form form">
-                  <div class="form__btns">
+                  <div class="popup-request__btns form__btns">
                     <label class="form__field" aria-label="Имя">
                       <svg width="16" height="16">
                         <use xlink:href="images/sprites/sprite-multi.svg#user"></use>
@@ -1826,7 +1823,7 @@
     <div class="popup popup-accept">
       <div class="popup__wrapper">
           <div class="popup__inner">
-              <div class="popup__content">
+              <div class="popup__content popup__content--centered">
                 <button class="btn-reset header__mobile-btn  header__mobile-btn--close popup-close popup__btn-close" type="button" aria-label="Закрыть окно">
                   <svg width="15" height="5">
                     <use xlink:href="images/sprites/sprite-multi.svg#close"></use>
